fixing alignment

--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,8 @@
 html {
 	font-size: 62.5%;
 }
+
+#root {
+	display: flex;
+	justify-content: center;
+}
